--- a/package.json
+++ b/package.json
@@ -9,18 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-toast": "^1.2.1",
+    "@studio-freight/lenis": "^1.0.42",
+    "axios": "^1.7.5",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.2.0",
+    "framer-motion": "^11.3.30",
+    "lucide": "^0.433.0",
+    "lucide-react": "^0.436.0",
+    "next": "14.2.6",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "typescript": "^5"
   }
 }
