--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.0",
-    "framer-motion": "^11.3.30",
+    "framer-motion": "^11.8.0",
     "lucide": "^0.433.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
@@ -29,6 +29,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-image-gallery": "^1.3.0",
+    "react-masonry-css": "^1.0.16",
     "react-scroll-parallax": "^3.4.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
@@ -38,6 +40,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-image-gallery": "^1.2.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "postcss": "^8",
