--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
-EMAIL_USER=tayebhossain88@gmail.com
-EMAIL_PASS=bftbdcbvirdbgnbg
+# EMAIL_USER=tayebhossain88@gmail.com
+# EMAIL_PASS=bftbdcbvirdbgnbg
+
+# Assumed
+EMAIL_HOST=smtp.hotelambeatlesplatz.de 
+EMAIL_PORT=587
+EMAIL_USER=info@hotelambeatlesplatz.de
+EMAIL_PASS=email_password
+EMAIL_FROM="Hotel am Beatles-Platz <info@hotelambeatlesplatz.de>"
