--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.8.0",
+    "i18next": "^23.16.0",
     "lucide": "^0.433.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "next-i18next": "^15.3.1",
+    "next-intl": "^3.21.1",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
